force-app/main/default/objects/Round_Robin_Runtime__c/Round_Robin_Runtime__c.object-meta.xml
<CustomObject>
    <label>Round Robin Runtime</label>
    <nameField>
        <label>Round Robin Runtime Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Round Robin Runtimes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>