force-app/main/default/objects/Round_Robin_Runtime__c/fields/Cycle_Started_At__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Started_At__c</fullName>
    <label>Cycle Started At</label>
    <type>DateTime</type>
</CustomField>