force-app/main/default/objects/Round_Robin_Runtime__c/fields/Last_Assigned_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigned_User_Id__c</fullName>
    <label>Last Assigned User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>